cmake_minimum_required(VERSION 3.8)
project(Exercise)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp
        InterviewQuestions/Utilities/List.cpp
        InterviewQuestions/Utilities/Tree.cpp
        InterviewQuestions/Utilities/BinaryTree.cpp
        InterviewQuestions/03_FindInPartiallySortedMatrix/FindInPartiallySortedMatrix.cpp
        InterviewQuestions/04_ReplaceBlank/ReplaceBlank.cpp
        InterviewQuestions/05_PrintListInReversedOrder/PrintListInReversedOrder.cpp
        InterviewQuestions/06_ConstructBinaryTree/ConstructBinaryTree.cpp
        InterviewQuestions/07_QueueWithTwoStacks/QueueWithTwoStacks.cpp
        InterviewQuestions/07_QueueWithTwoStacks/QueueWithTwoStacks.h
        InterviewQuestions/08_MinNumberInRotatedArray/MinNumberInRotatedArray.cpp
        InterviewQuestions/08_MinNumberInRotatedArray/MinNumberInRotatedArray.h
        InterviewQuestions/09_Fibonacci/Fibonacci.cpp
        InterviewQuestions/09_Fibonacci/Fibonacci.h
        InterviewQuestions/10_NumberOf1InBinary/NumberOf1InBinary.cpp
        InterviewQuestions/10_NumberOf1InBinary/NumberOf1InBinary.h
        InterviewQuestions/11_Power/Power.cpp
        InterviewQuestions/11_Power/Power.h
        InterviewQuestions/12_Print1ToMaxOfNDigits/Print1ToMaxOfNDigits.cpp
        InterviewQuestions/12_Print1ToMaxOfNDigits/Print1ToMaxOfNDigits.h
        InterviewQuestions/13_DeleteNodeInList/DeleteNodeInList.cpp
        InterviewQuestions/13_DeleteNodeInList/DeleteNodeInList.h
        InterviewQuestions/14_ReorderArray/ReorderArray.cpp
        InterviewQuestions/14_ReorderArray/ReorderArray.h
        InterviewQuestions/15_KthNodeFromEnd/KthNodeFromEnd.cpp
        InterviewQuestions/15_KthNodeFromEnd/KthNodeFromEnd.h
        InterviewQuestions/16_ReverseList/ReverseList.cpp
        InterviewQuestions/16_ReverseList/ReverseList.h
        InterviewQuestions/17_MergeSortedLists/MergeSortedLists.cpp
        InterviewQuestions/17_MergeSortedLists/MergeSortedLists.h
        InterviewQuestions/18_SubstructureInTree/SubstructureInTree.cpp
        InterviewQuestions/18_SubstructureInTree/SubstructureInTree.h
        InterviewQuestions/19_MirrorOfBinaryTree/MirrorOfBinaryTree.cpp
        InterviewQuestions/19_MirrorOfBinaryTree/MirrorOfBinaryTree.h
        InterviewQuestions/20_PrintMatrix/PrintMatrix.cpp
        InterviewQuestions/20_PrintMatrix/PrintMatrix.h
        InterviewQuestions/21_MinInStack/MinInStack.cpp
        InterviewQuestions/21_MinInStack/MinInStack.h
        InterviewQuestions/22_StackPushPopOrder/StackPushPopOrder.cpp
        InterviewQuestions/22_StackPushPopOrder/StackPushPopOrder.h
        InterviewQuestions/23_PrintTreeFromTopToBottom/PrintTreeFromTopToBottom.cpp
        InterviewQuestions/23_PrintTreeFromTopToBottom/PrintTreeFromTopToBottom.h
        InterviewQuestions/24_SquenceOfBST/SquenceOfBST.cpp
        InterviewQuestions/24_SquenceOfBST/SquenceOfBST.h
        InterviewQuestions/25_PathInTree/PathInTree.cpp
        InterviewQuestions/25_PathInTree/PathInTree.h
        InterviewQuestions/26_ComplexList/ComplexList.cpp
        InterviewQuestions/26_ComplexList/ComplexList.h
        InterviewQuestions/27_ConvertBinarySearchTree/ConvertBinarySearchTree.cpp
        InterviewQuestions/27_ConvertBinarySearchTree/ConvertBinarySearchTree.h
        InterviewQuestions/28_StringPermutation/StringPermutation.cpp
        InterviewQuestions/28_StringPermutation/StringPermutation.h
        InterviewQuestions/29_MoreThanHalfNumber/MoreThanHalfNumber.cpp
        InterviewQuestions/29_MoreThanHalfNumber/MoreThanHalfNumber.h
        InterviewQuestions/30_KLeastNumbers/KLeastNumbers.cpp
        InterviewQuestions/30_KLeastNumbers/KLeastNumbers.h
        InterviewQuestions/31_GreatestSumOfSubarrays/GreatestSumOfSubarrays.cpp
        InterviewQuestions/31_GreatestSumOfSubarrays/GreatestSumOfSubarrays.h
        InterviewQuestions/32_NumberOf1/NumberOf1.cpp
        InterviewQuestions/32_NumberOf1/NumberOf1.h
        InterviewQuestions/33_SortArrayForMinNumber/SortArrayForMinNumber.cpp
        InterviewQuestions/33_SortArrayForMinNumber/SortArrayForMinNumber.h
        InterviewQuestions/34_UglyNumber/UglyNumber.cpp
        InterviewQuestions/34_UglyNumber/UglyNumber.h
        InterviewQuestions/35_FirstNotRepeatingChar/FirstNotRepeatingChar.cpp
        InterviewQuestions/35_FirstNotRepeatingChar/FirstNotRepeatingChar.h
        InterviewQuestions/36_InversePairs/InversePairs.cpp
        InterviewQuestions/36_InversePairs/InversePairs.h
        InterviewQuestions/37_FirstCommandNodesInLists/FirstCommandNodesInLists.cpp
        InterviewQuestions/37_FirstCommandNodesInLists/FirstCommandNodesInLists.h
        InterviewQuestions/38_NumberOfK/NumberOfK.cpp
        InterviewQuestions/38_NumberOfK/NumberOfK.h
        InterviewQuestions/39_1_TreeDepth/TreeDepth.cpp
        InterviewQuestions/39_1_TreeDepth/TreeDepth.h
        InterviewQuestions/39_2_BalancedBinaryTree/BalancedBinaryTree.cpp
        InterviewQuestions/39_2_BalancedBinaryTree/BalancedBinaryTree.h
        InterviewQuestions/40_NumbersAppearOnce/NumbersAppearOnce.cpp
        InterviewQuestions/40_NumbersAppearOnce/NumbersAppearOnce.h
        InterviewQuestions/41_1_TwoNumbersWithSum/TwoNumbersWithSum.cpp
        InterviewQuestions/41_1_TwoNumbersWithSum/TwoNumbersWithSum.h
        InterviewQuestions/41_2_ContinuesSquenceWithSum/ContinuesSquenceWithSum.cpp
        InterviewQuestions/41_2_ContinuesSquenceWithSum/ContinuesSquenceWithSum.h
        InterviewQuestions/42_1_ReverseWordsInSentence/ReverseWordsInSentence.cpp
        InterviewQuestions/42_1_ReverseWordsInSentence/ReverseWordsInSentence.h
        InterviewQuestions/42_2_LeftRotateString/LeftRotateString.cpp
        InterviewQuestions/42_2_LeftRotateString/LeftRotateString.h
        InterviewQuestions/43_DicesProbability/DicesProbability.cpp
        InterviewQuestions/43_DicesProbability/DicesProbability.h
        InterviewQuestions/44_ContinousCards/ContinousCards.cpp
        InterviewQuestions/44_ContinousCards/ContinousCards.h
        InterviewQuestions/45_LastNumberInCircle/LastNumberInCircle.cpp
        InterviewQuestions/45_LastNumberInCircle/LastNumberInCircle.h
        InterviewQuestions/46_Accumulate/Accumulate.cpp
        InterviewQuestions/46_Accumulate/Accumulate.h
        InterviewQuestions/47_AddTwoNumbers/AddTwoNumbers.cpp
        InterviewQuestions/47_AddTwoNumbers/AddTwoNumbers.h
        InterviewQuestions/48_SealedClass/SealedClass.cpp
        InterviewQuestions/48_SealedClass/SealedClass.h
        InterviewQuestions/49_StringToInt/StringToInt.cpp
        InterviewQuestions/49_StringToInt/StringToInt.h
        InterviewQuestions/50_CommonParentInTree/CommonParentInTree.cpp
        InterviewQuestions/50_CommonParentInTree/CommonParentInTree.h
        InterviewQuestions/21_MinInStack/StackWithMin.h)
add_executable(Exercise ${SOURCE_FILES})